Fix navigation on narrow windows. Change padding to margin.

--- a/_src/docs.css
+++ b/_src/docs.css
@@ -120,7 +120,7 @@ rdme-callout[theme=warn] > *:first-child {
   color: #375bd2;
 }
 #nav-container .tab a {
-  padding: 16px;
+  margin-right: 15px;
 }
 a:hover,
 #nav-container .tab a:hover {
